Improved how the graph looks